Fix scorecard elements overwriting menus on IE7.

--- a/ihp/media/css/public_scorecards.css
+++ b/ihp/media/css/public_scorecards.css
@@ -354,7 +354,6 @@ div.col {
 
 #scorecard td.expected_result {
 	background-color:#D1DDD9;
-	padding:0;
 	-moz-border-radius:8px;
 	-webkit-border-radius:8px;
 	border-radius:8px;
@@ -363,7 +362,6 @@ div.col {
 }
 
 #scorecard td.expected_result p {
-	position: relative;
 	margin: 10px 0 0;
 }
 
@@ -728,7 +726,6 @@ done
 /* Background and z-index hacks for ie-css3.htc */
 #scorecard, .infobox { 
   clear:both;
-  position:relative;
   margin:0;
 }
 
@@ -778,7 +775,6 @@ done
 
 #scorecard h2
 {
-	position: relative;
 }
 
 #content .content {
@@ -829,7 +825,7 @@ table.data {
 table.data th, table.data td {
 	padding: 0.2em 0.5em;
 	text-align: left;
-} 
+}
 
 table.data th {
 	border-bottom: 1px solid #ddd;
